test_programs/compile_failure/noirc_frontend_tests_deny_fold_attribute_on_unconstrained/src/main.nr

        #[fold]
        unconstrained pub fn foo(x: Field, y: Field) {
            assert(x != y);
        }
    